review 03-fa.md

--- a/Farsi_md/04-fa.md
+++ b/Farsi_md/04-fa.md
@@ -4,17 +4,17 @@
 
 | عملگر       | نام             | توضیح                                                     |
 |------------|-----------------|---------------------------------------------------------|
-| `a + b`    | جمع             | حاصل جمع `a` و `b`                                      |
-| `a - b`    | تفریق          | تفاضل `a` و `b`                                         |
-| `a * b`    | ضرب            | حاصل ضرب `a` و `b`                                      |
-| `a / b`    | تقسیم واقعی    | خارجقسمت `a` و `b` (با نتیجه اعشاری)                   |
-| `a // b`   | تقسیم صحیح     | خارجقسمت `a` و `b` (با حذف بخش کسری)                   |
-| `a % b`    | باقیمانده       | باقیمانده صحیح تقسیم `a` بر `b`                        |
-| `a ** b`   | توان           | `a` به توان `b`                                         |
-| `-a`       | نقیض سازی      | قرینه `a`                                                |
-| `+a`       | مثبت یکانی     | بدون تغییر `a` (کمکاربرد)                              |
+| `a + b`    | جمع             | `a` و `b` حاصل جمع                                    |
+| `a - b`    | تفریق          |  `a` و `b` تفاضل                                         |
+| `a * b`    | ضرب            |   `a` و `b` حاصل ضرب                                      |
+| `a / b`    | تقسیم     |  `b` بر `a`  تقسیم اعشاری                   |
+| `a // b`   | تقسیم صحیح     |  `b` بر `a`     تقسیم صحیح                   |
+| `a % b`    | باقیمانده       |    `b` بر `a` باقیمانده تقسیم صحیح                        |
+| `a ** b`   | توان           | `b` به توان `a`                                         |
+| `-a`       | نقیض       |  `a` قرینه                                                |
+| `+a`       | مثبت یکانی     |   `a` (کمکاربرد) بدون تغییر                              |
 
-این عملگرها را می‌توان به روش‌های intuitive (طبیعی) استفاده و با پرانتزهای استاندارد ترکیب کرد. به عنوان مثال:
+این عملگرها را می‌توان  با پرانتزهای استاندارد ترکیب کرد. به عنوان مثال:
 
 ```python
 # addition, subtraction, multiplication
@@ -99,7 +99,7 @@ bin(4 | 10)
 
 به ویژه، کاربرانی که از زبان‌های دیگر می‌آیند، گاهی اوقات به اشتباه به جای عملگر توان (a ** b) از عملگر XOR (a ^ b) استفاده می‌کنند.
 
-عملیات انتساب
+## عملیات انتساب
 دیدیم که می‌توان به متغیرها با عملگر = مقدار اختصاص داد و مقادیر را برای استفاده بعدی ذخیره کرد. برای مثال:
 
 ```python
@@ -116,10 +116,10 @@ print(a)
 ```python
 a + 2
 
->>>26
+>>> 26
 ```
 
-ممکن است بخواهیم متغیر «a» را با این مقدار جدید به‌روزرسانی کنیم. در این حالت می‌توانیم عمل جمع و انتساب را ترکیب کرده و بنویسیم «a = a + 2». از آنجا که این نوع عملیات ترکیبی و انتساب بسیار رایج است، پایتون عملگرهای به‌روزرسانی داخلی برای تمامی عملیات حسابی ارائه می‌دهد.
+ممکن است بخواهیم متغیر «a» را با این مقدار جدید به‌روزرسانی کنیم. در این حالت می‌توانیم عمل جمع و انتساب را ترکیب کنیم   . از آنجا که این نوع عملیات ترکیبی و انتساب بسیار رایج است، پایتون عملگرهای به‌روزرسانی داخلی برای تمامی عملیات حسابی ارائه می‌دهد.
 
 ```python
 a += 2  # equivalent to a = a + 2
@@ -139,7 +139,7 @@ print(a)
 
 هر یک از این عملگرها معادل عمل مربوطه به همراه انتساب هستند. به عبارت دیگر، برای هر عملگر "``■``"، عبارت ``a ■= b`` معادل ``a = a ■ b`` است، با یک تفاوت کوچک.
 
-برای اشیای تغییرپذیر مانند لیست‌ها، آرایه‌ها یا دیتافریم‌ها، این عملگرهای انتساب افزایشی در واقع به طور ظریفی با معادل‌های طولانی‌تر خود تفاوت دارند: آن‌ها محتوای شیء اصلی را تغییر می‌دهند instead of ایجاد یک شیء جدید برای ذخیره نتیجه.
+برای اشیاء تغییرپذیر مانند لیست‌ها، آرایه‌ها یا DataFrames، این عملیات انتساب افزوده در واقع تفاوت ظریفی با همتایان طولانی‌تر خود دارند: آنها به جای ایجاد یک شیء جدید برای ذخیره نتیجه، محتویات شیء اصلی را تغییر می‌دهند.
 
 ## عملیات مقایسه‌ای
 
@@ -149,12 +149,12 @@ print(a)
 
 | عملگر         | توضیح                           |  
 |---------------|---------------------------------|  
-| ``a == b``    | ``a`` برابر با ``b``           |  
-| ``a != b``    | ``a`` نامساوی با ``b``         |  
-| ``a < b``     | ``a`` کوچک‌تر از ``b``         |  
-| ``a > b``     | ``a`` بزرگ‌تر از ``b``         |  
-| ``a <= b``    | ``a`` کوچک‌تر یا مساوی با ``b``|  
-| ``a >= b``    | ``a`` بزرگ‌تر یا مساوی با ``b``|  
+| ``a == b``    | ``b`` برابر با ``a``           |  
+| ``a != b``    | ``b`` نامساوی با ``a``         |  
+| ``a < b``     | ``b`` کوچک‌تر از ``a``         |  
+| ``a > b``     | ``b`` بزرگ‌تر از ``a``         |  
+| ``a <= b``    | ``b`` کوچک‌تر یا مساوی با ``a``|  
+| ``a >= b``    | ``b`` بزرگ‌تر یا مساوی با ``a``|  
 
 این عملگرهای مقایسه‌ای را می‌توان با عملگرهای حسابی و بیتی ترکیب کرد تا محدوده تقریباً نامحدودی از آزمون‌ها برای اعداد بیان شود.
 
@@ -190,11 +190,11 @@ a = 25
 >>>True
 ```
 
-به خاطر داشته باشید که `~` عملگر معکوس‌سازی بیتی است و وقتی تمام بیت‌های صفر را معکوس کنید، به عدد -۱ می‌رسید. اگر کنجکاو هستید که چرا این اتفاق می‌افتد، به طرح کدگذاری اعداد صحیح *مکمل دو* مراجعه کنید که پایتون از آن برای کدگذاری اعداد علامت‌دار استفاده می‌کند و به این فکر کنید که وقتی تمام بیت‌های اعداد کدگذاری شده به این روش را معکوس می‌کنید چه اتفاقی می‌افتد.
+به خاطر داشته باشید که `~` عملگر معکوس‌سازی بیتی است و وقتی تمام بیت‌های صفر را معکوس کنید، به عدد 1- می‌رسید. اگر کنجکاو هستید که چرا این اتفاق می‌افتد، به طرح کدگذاری اعداد صحیح *مکمل دو* مراجعه کنید که پایتون از آن برای کدگذاری اعداد علامت‌دار استفاده می‌کند و به این فکر کنید که وقتی تمام بیت‌های اعداد کدگذاری شده به این روش را معکوس می‌کنید چه اتفاقی می‌افتد.
 
-عملیات بولی
+## عملیات بولی
 
-هنگام کار با مقادیر بولی، پایتون عملگرهایی برای ترکیب این مقادیر با استفاده از مفاهیم استاندارد "and" (و)، "or" (یا) و "not" (نَه) ارائه می‌دهد. همان طور که انتظار می‌رود، این عملگرها با استفاده از کلمات and، or و not بیان می‌شوند.
+هنگام کار با مقادیر بولی، پایتون عملگرهایی برای ترکیب این مقادیر با استفاده از مفاهیم استاندارد "and" (و)، "or" (یا) و "not" (نقیض) ارائه می‌دهد. همان طور که انتظار می‌رود، این عملگرها با استفاده از کلمات and، or و not بیان می‌شوند.
 
 ```python
 x = 4
@@ -303,7 +303,7 @@ a is b
 >>> False
 ```
 
-این عملیات عضویت نمونه‌ای هستند که نشان می‌دهند چرا پایتون در مقایسه با زبان‌های سطح پایین‌تری مثل C، چنین آسان برای استفاده است.
+این عملیات ها نمونه‌ای هستند که نشان می‌دهند چرا پایتون در مقایسه با زبان‌های سطح پایین‌تری مثل C، چنین آسان برای استفاده است.
 
 در زبان C، عضویت معمولاً با ساخت یک حلقه دستی روی لیست و بررسی برابری هر مقدار تعیین می‌شود.
 
