--- a/فهرست.ipynb
+++ b/فهرست.ipynb
@@ -5,23 +5,45 @@
    "id": "7b16f585",
    "metadata": {},
    "source": [
-    "<div dir=\"rtl\">\n",
-    "#  تور سریع السیر پایتون\n",
-    "</div>"
+    "<h1 dir=rtl>\n",
+    "تور سریع السیر پایتون\n",
+    "</h1>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bb96c73b",
+   "id": "d21e4ed4",
    "metadata": {},
    "source": [
-    "#  تور سریع السیر پایتون"
+    "<p dir=rtl>جیک وندر پلاس</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cb6b5d8",
+   "metadata": {},
+   "source": [
+    "<img src=\"./img/WhireWindBookCover.png\">"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
