--- a/فهرست.ipynb
+++ b/فهرست.ipynb
@@ -5,7 +5,7 @@
    "id": "7b16f585",
    "metadata": {},
    "source": [
-    "<h1 dir=rtl align=right>\n",
+    "<h1 dir=rtl align=\"right\">\n",
     "تور سریع السیر پایتون\n",
     "</h1>"
    ]
@@ -15,7 +15,7 @@
    "id": "d21e4ed4",
    "metadata": {},
    "source": [
-    "<p dir=rtl align=right>جیک وندر پلاس</p>"
+    "<p dir=rtl align=\"right\">جیک وندر پلاس</p>"
    ]
   },
   {
@@ -31,10 +31,10 @@
    "id": "26d80bc8",
    "metadata": {},
    "source": [
-    "<p dir=rtl align=right>اینها دفترچه‌های یادداشت  پشت گزارش اورِیلی من هستند، <a href=\"http://www.oreilly.com/programming/free/a-whirlwind-tour-of-python.csp)\">تور سریع السیر پایتون\n",
+    "<p dir=rtl align=\"right\">اینها دفترچه‌های یادداشت  پشت گزارش اورِیلی من هستند، <a href=\"http://www.oreilly.com/programming/free/a-whirlwind-tour-of-python.csp)\">تور سریع السیر پایتون\n",
     "</a>.</p>\n",
     "\n",
-    "<p dir=rtl align=right>لیست کامل دفترچه های ژوپیترِ <a href=\"https://github.com/jakevdp/WhirlwindTourOfPython\">در گیتهاب</a> موجود است.</p>"
+    "<p dir=rtl align=\"right\">لیست کامل دفترچه های ژوپیترِ <a href=\"https://github.com/jakevdp/WhirlwindTourOfPython\">در گیتهاب</a> موجود است.</p>"
    ]
   },
   {
@@ -42,10 +42,10 @@
    "id": "fe326a1c",
    "metadata": {},
    "source": [
-    "<p dir=rtl align=right>تور سریع السیر پایتون\n",
+    "<p dir=rtl align=\"right\">تور سریع السیر پایتون\n",
     " مقدمه‌ای سریع بر اجزای ضروری زبان پایتون برای محققان و توسعه‌دهندگانی است که از قبل با برنامه‌نویسی به زبان دیگری آشنا هستند.</p>\n",
     "\n",
-    "<p dir=rtl align=right>این مطالب به ویژه برای کسانی که مایل به استفاده از پایتون برای علم داده و/یا برنامه‌نویسی علمی هستند، در نظر گرفته شده است و در این راستا به عنوان مقدمه‌ای بر کتاب آینده من، *راهنمای علم داده پایتون*، عمل می‌کند. این دفترچه‌ها برگرفته از سخنرانی‌ها و کارگاه‌هایی هستند که من در مورد این موضوعات در دانشگاه واشنگتن و در کنفرانس‌ها، جلسات و کارگاه‌های مختلف در سراسر جهان ارائه داده‌ام.</p>"
+    "<p dir=rtl align=\"right\">این مطالب به ویژه برای کسانی که مایل به استفاده از پایتون برای علم داده و/یا برنامه‌نویسی علمی هستند، در نظر گرفته شده است و در این راستا به عنوان مقدمه‌ای بر کتاب آینده من، *راهنمای علم داده پایتون*، عمل می‌کند. این دفترچه‌ها برگرفته از سخنرانی‌ها و کارگاه‌هایی هستند که من در مورد این موضوعات در دانشگاه واشنگتن و در کنفرانس‌ها، جلسات و کارگاه‌های مختلف در سراسر جهان ارائه داده‌ام.</p>"
    ]
   },
   {
@@ -53,9 +53,9 @@
    "id": "960980da",
    "metadata": {},
    "source": [
-    "<h3 dir=rtl align=right>فهرست</h3>\n",
+    "<h3 dir=rtl align=\"right\">فهرست</h3>\n",
     "\n",
-    "<div dir=rtl align=right>\n",
+    "<div dir=rtl align=\"right\">\n",
     "<a href=\"./00-مقدمه.ipynb\">1. مقدمه</a>\n",
     "<br>\n",
     "<a href=\"./01-نحوه اجرای کد پایتون.ipynb\">2. نحوه اجرای کد پایتون</a>\n",
@@ -100,20 +100,20 @@
    "id": "7a80f3d5",
    "metadata": {},
    "source": [
-    "<h3 dir=rtl align=right>لایسنس</h3>\n",
+    "<h3 dir=rtl align=\"right\">لایسنس</h3>\n",
     "\n",
-    "<p dir=rtl align=right>\n",
+    "<p dir=rtl align=\"right\">\n",
     "این مطلب تحت مجوز «بدون حق محفوظ» <a href=(LICENSE)>[CC0]</a> منتشر شده است، و بنابراین شما آزاد هستید که این مطلب را برای هر منظوری مجدداً استفاده، اصلاح، تکمیل و ارتقا دهید.\n",
     "</p>\n",
     "\n",
-    "<p dir=rtl align=right>\n",
+    "<p dir=rtl align=\"right\">\n",
     "با این اوصاف، من درخواست می‌کنم (اما الزامی ندارم) که اگر از این مطالب استفاده یا اقتباس می‌کنید، ارجاع و/یا استناد مناسب را ذکر کنید؛ برای مثال:\n",
     "</p>\n",
     "\n",
     "> *A Whirlwind Tour of Python* by Jake VanderPlas (O’Reilly). Copyright 2016 O’Reilly Media, Inc., 978-1-491-96465-1\n",
     "\n",
     "\n",
-    "<p dir=rtl align=right>\n",
+    "<p dir=rtl align=\"right\">\n",
     "درباره CC0 بیشتر بخوانید:<a href=\"https://creativecommons.org/share-your-work/public-domain/cc0/\">اینجا</a>\n",
     "</p>"
    ]
