--- a/فهرست.md
+++ b/فهرست.md
@@ -1,11 +1,80 @@
 <div dir="rtl">
 
-<h3>
+<h1>
 تور سریع السیر پایتون
-</h3>
+</h1>
 
 <p>
 جیک وندر پلاس
 </p>
 
+<img src="./img/WhireWindBookCover.png">
+
+<p dir=rtl align="right">اینها دفترچه‌های یادداشت  پشت گزارش اورِیلی من هستند، <a href="http://www.oreilly.com/programming/free/a-whirlwind-tour-of-python.csp)">تور سریع السیر پایتون
+</a>.</p>
+
+<p dir=rtl align="right">لیست کامل دفترچه های ژوپیترِ <a href="https://github.com/jakevdp/WhirlwindTourOfPython">در گیتهاب</a> موجود است.</p>
+
+<p dir=rtl align="right">تور سریع السیر پایتون
+ مقدمه‌ای سریع بر اجزای ضروری زبان پایتون برای محققان و توسعه‌دهندگانی است که از قبل با برنامه‌نویسی به زبان دیگری آشنا هستند.</p>
+
+<p dir=rtl align="right">این مطالب به ویژه برای کسانی که مایل به استفاده از پایتون برای علم داده و/یا برنامه‌نویسی علمی هستند، در نظر گرفته شده است و در این راستا به عنوان مقدمه‌ای بر کتاب آینده من، *راهنمای علم داده پایتون*، عمل می‌کند. این دفترچه‌ها برگرفته از سخنرانی‌ها و کارگاه‌هایی هستند که من در مورد این موضوعات در دانشگاه واشنگتن و در کنفرانس‌ها، جلسات و کارگاه‌های مختلف در سراسر جهان ارائه داده‌ام.</p>
+
+<h3 dir=rtl align="right">فهرست</h3>
+
+<div dir=rtl align="right">
+<a href="./00-مقدمه.ipynb">1. مقدمه</a>
+<br>
+<a href="./01-نحوه اجرای کد پایتون.ipynb">2. نحوه اجرای کد پایتون</a>
+<br>
+<a href="./02-سینتکس پایه پایتون.ipynb">3. سینتکس پایه پایتون</a>
+<br>
+<a href="./03-معناشناسی پایتون: متغیرها.ipynb">4. معناشناسی پایتون: متغیرها</a>
+<br>
+<a href="./04-معناشناسی پایتون: عملگرها.ipynb">5. معناشناسی پایتون: عملگرها</a>
+<br>
+<a href="./05-انواع داده اسکالر داخلی.ipynb">6. انواع داده اسکالر داخلی</a>
+<br>
+<a href="./06-ساختارهای داده داخلی.ipynb">7. ساختارهای داده داخلی</a>
+<br>
+<a href="./07-دستورات کنترل جریان.ipynb">8. دستورات کنترل جریان</a>
+<br>
+<a href="./08-تعریف توابع.ipynb">9. تعریف توابع</a>
+<br>
+<a href="./09-خطاها و استثناها.ipynb">10. خطاها و استثناها</a>
+<br>
+<a href="./10-پیمایشگرها.ipynb">11. پیمایشگرها</a>
+<br>
+<a href="./11-تعریف فشرده لیست.ipynb">12. تعریف فشرده لیست</a>
+<br>
+<a href="./12-ژنراتورها و عبارات ژنراتور.ipynb">13. ژنراتورها و عبارات ژنراتور</a>
+<br>
+<a href="./13-ماژول‌ها و بسته‌ها.ipynb">14. ماژول‌ها و بسته‌ها</a>
+<br>
+<a href="./14-رشته‌ها و عبارات باقاعده.ipynb">15. رشته‌ها و عبارات باقاعده</a>
+<br>
+<a href="./15-معرفی ابزارهای علم داده.ipynb">16. معرفی ابزارهای علم داده</a>
+<br>
+<a href="./16-منابع برای یادگیری بیشتر.ipynb">17. منابع برای یادگیری بیشتر</a>
+<br>
+<a href="./17-پیوست: کدی برای بازتولید شکل‌ها.ipynb">18. پیوست: کدی برای بازتولید شکل‌ها</a>
+<br>
+</div>
+
+<h3 dir=rtl align="right">لایسنس</h3>
+
+<p dir=rtl align="right">
+این مطلب تحت مجوز «بدون حق محفوظ» <a href=(LICENSE)>[CC0]</a> منتشر شده است، و بنابراین شما آزاد هستید که این مطلب را برای هر منظوری مجدداً استفاده، اصلاح، تکمیل و ارتقا دهید.
+</p>
+
+<p dir=rtl align="right">
+با این اوصاف، من درخواست می‌کنم (اما الزامی ندارم) که اگر از این مطالب استفاده یا اقتباس می‌کنید، ارجاع و/یا استناد مناسب را ذکر کنید؛ برای مثال:
+</p>
+
+> *A Whirlwind Tour of Python* by Jake VanderPlas (O’Reilly). Copyright 2016 O’Reilly Media, Inc., 978-1-491-96465-1
+
+
+<p dir=rtl align="right">
+درباره CC0 بیشتر بخوانید:<a href="https://creativecommons.org/share-your-work/public-domain/cc0/">اینجا</a>
+</p>
 </div>
