--- a/02-نحوه اجرای کد پایتون.md
+++ b/02-نحوه اجرای کد پایتون.md
@@ -1,1 +1,132 @@
-01
+<div dir="rtl">
+
+|
+<a href="01-مقدمه.md">قبلی: مقدمه</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="03-سینتکس پایه پایتون.md">بعدی: سینتکس پایه پایتون   </a>
+|
+
+<h1>نحوه‌ی اجرای کد پایتون</h1>
+
+<p>پایتون یک زبان انعطاف‌پذیر است و روش‌های مختلفی برای استفاده از آن وجود دارد که بستگی به کار خاص شما دارد. یکی از ویژگی‌هایی که پایتون را از سایر زبان‌های برنامه‌نویسی متمایز می‌کند، تفسیرشدن آن به جای کامپایل‌شدن است. این یعنی کد خط‌به‌خط اجرا می‌شود، و امکان برنامه‌نویسی تعاملی را فراهم می‌کند، به شکلی که در زبان‌های کامپایل‌شده مانند Fortran، C یا Java به‌طور مستقیم ممکن نیست.</p>
+
+<p>این بخش چهار روش اصلی اجرای کد پایتون را شرح می‌دهد: مفسر پایتون، مفسر IPython، اسکریپت‌های مستقل، و نوت‌بوک Jupyter.</p>
+
+
+<h2>مفسر پایتون</h2>
+<p>ساده‌ترین روش برای اجرای کد پایتون، اجرای خط‌به‌خط آن در مفسر پایتون است. مفسر پایتون را می‌توان با نصب زبان پایتون (به بخش قبلی مراجعه کنید) و تایپ کردن python در خط فرمان اجرا کرد (در مک OS X و سیستم‌های Unix/Linux به دنبال Terminal بگردید، و در ویندوز از برنامه‌ی Command Prompt استفاده کنید):</p>
+
+
+<pre dir="ltr">
+<font color=white>
+$ python
+Python 3.5.1 |Continuum Analytics, Inc.| (default, Dec  7 2015, 11:24:55)
+Type "help", "copyright", "credits" or "license" for more information.
+>>></font>
+</pre>
+
+
+<p>پس از راه‌اندازی مفسر، می‌توانید شروع به تایپ و اجرای قطعه‌کدها کنید. در اینجا از مفسر به‌عنوان یک ماشین حساب ساده استفاده می‌کنیم، محاسبات را انجام می‌دهیم و مقادیر را به متغیرها اختصاص می‌دهیم:</p>
+
+<pre dir=ltr><font color=white>
+>>> 1 + 1
+2
+>>> x = 5
+>>> x * 3
+15
+</font>
+</pre>
+
+<p>مفسر اجرای قطعه‌کدهای کوچک پایتون و آزمایش دنباله‌های کوتاه از عملیات را بسیار ساده و راحت می‌کند.</p>
+
+
+<h2>مفسر IPython</h2>
+
+<p>اگر زمان زیادی را با مفسر پایه‌ی پایتون صرف کنید، متوجه می‌شوید که بسیاری از امکانات یک محیط توسعه‌ی تعاملی کامل را ندارد. یک مفسر جایگزین به نام IPython (برای Interactive Python) همراه با توزیع Anaconda ارائه می‌شود و شامل مجموعه‌ای از بهبودهای کاربردی نسبت به مفسر پایه‌ی پایتون است. می‌توان آن را با تایپ کردن ipython در خط فرمان اجرا کرد:</p>
+
+
+<pre dir=ltr><font color=white>
+$ ipython
+Python 3.5.1 |Continuum Analytics, Inc.| (default, Dec  7 2015, 11:24:55) 
+Type "copyright", "credits" or "license" for more information.
+
+IPython 4.0.0 -- An enhanced Interactive Python.
+?         -> Introduction and overview of IPython's features.
+%quickref -> Quick reference.
+help      -> Python's own help system.
+object?   -> Details about 'object', use 'object??' for extra details.
+
+In [1]: 
+</font>
+</pre>
+
+
+
+<p>تفاوت اصلی ظاهری بین مفسر پایتون و مفسر پیشرفته‌ی IPython در خط فرمان آن‌ها است: پایتون به‌طور پیش‌فرض از >>> استفاده می‌کند، در حالی که IPython از دستورات شماره‌گذاری‌شده بهره می‌برد (مثلاً In [1]:). با این حال، همچنان می‌توانیم کد را خط‌به‌خط همانند قبل اجرا کنیم:</p>
+
+
+<pre dir=ltr><font color=white>
+In [1]: 1 + 1
+Out[1]: 2
+
+In [2]: x = 5
+
+In [3]: x * 3
+Out[3]: 15
+</font>
+</pre>
+
+
+<p>توجه داشته باشید که همان‌طور که ورودی شماره‌گذاری می‌شود، خروجی هر دستور نیز شماره‌گذاری می‌شود. IPython مجموعه‌ی گسترده‌ای از ویژگی‌های کاربردی را در اختیار قرار می‌دهد؛ برای برخی پیشنهادها درباره منابع بیشتر برای مطالعه، به بخش «منابع برای یادگیری بیشتر» مراجعه کنید.</p>
+
+
+
+<h2>اسکریپت‌های مستقل پایتون</h2>
+
+
+<p>اجرای قطعه‌کدهای پایتون خط‌به‌خط در برخی موارد مفید است، اما برای برنامه‌های پیچیده‌تر، راحت‌تر است که کد را در یک فایل ذخیره کرده و همه را یک‌باره اجرا کنید. طبق قرارداد، اسکریپت‌های پایتون در فایل‌هایی با پسوند .py ذخیره می‌شوند.</p>
+<p>برای مثال، بیایید اسکریپتی به نام test.py ایجاد کنیم که شامل موارد زیر باشد:</p>
+
+
+<pre dir=ltr><font color=white>
+# file: test.py
+print("Running test.py")
+x = 5
+print("Result is", 3 * x)
+</font>
+</pre>
+
+
+<p>برای اجرای این فایل، اطمینان حاصل کنید که در دایرکتوری فعلی قرار دارد و در خط فرمان تایپ کنید:</p>
+
+
+<pre dir=ltr><font color=white>
+$ python test.py
+Running test.py
+Result is 15
+</font>
+</pre>
+
+
+<p>برای برنامه‌های پیچیده‌تر، ایجاد اسکریپت‌های مستقل مانند این ضروری است.</p>
+
+
+<h2>نوت‌بوک Jupyter</h2>
+
+
+<p>یکی از ترکیب‌های مفید بین ترمینال تعاملی و اسکریپت‌های مستقل، نوت‌بوک Jupyter است؛ یک قالب سند که امکان ترکیب کد قابل اجرا، متن قالب‌بندی‌شده، گرافیک و حتی قابلیت‌های تعاملی را در یک سند واحد فراهم می‌کند. اگرچه نوت‌بوک در ابتدا فقط برای پایتون طراحی شده بود، اما اکنون با تعداد زیادی از زبان‌های برنامه‌نویسی سازگار شده و بخش ضروری پروژه‌ی Jupyter محسوب می‌شود. نوت‌بوک هم به‌عنوان یک محیط توسعه مفید است و هم به‌عنوان روشی برای اشتراک‌گذاری کارها از طریق روایت‌های محاسباتی و داده‌محور که کد، نمودارها، داده‌ها و متن را با هم ترکیب می‌کنند.</p>
+
+
+|
+<a href="01-مقدمه.md">قبلی: مقدمه</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="03-سینتکس پایه پایتون.md">بعدی: سینتکس پایه پایتون   </a>
+|
+
+
+
+</div>
