--- a/03-سینتکس پایه پایتون.md
+++ b/03-سینتکس پایه پایتون.md
@@ -1,1 +1,363 @@
-02
+<div dir="rtl">
+
+|
+<a href="02-نحوه اجرای کد پایتون.md">قبلی:نحوه اجرای کد پایتون</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="04-معناشناسی پایتون: متغیرها.md">بعدی:معناشناسی پایتون: متغیرها   </a>
+|
+
+
+<h1>مروری سریع بر نحو (Syntax) زبان پایتون</h1>
+
+
+<p>پایتون در ابتدا به‌عنوان یک زبان آموزشی توسعه داده شد، اما سادگی استفاده و نحو (Syntax) تمیز آن باعث شده است که هم مبتدیان و هم متخصصان آن را بپذیرند. پاکیزگی نحو پایتون باعث شده برخی آن را «شبه‌کد قابل اجرا» بنامند، و واقعاً طبق تجربه‌ی شخصی من، خواندن و درک یک اسکریپت پایتون معمولاً بسیار ساده‌تر از خواندن اسکریپتی مشابه در زبان‌هایی مانند C است.</p>
+
+
+<p>در این بخش، شروع به بررسی ویژگی‌های اصلی نحو پایتون خواهیم کرد.</p>
+
+
+<p>نحو (Syntax) به ساختار زبان اشاره دارد؛ یعنی اینکه چه چیزی یک برنامهٔ درست و معتبر را تشکیل می‌دهد. در حال حاضر، روی معناشناسی (Semantics) — یعنی معنای واژه‌ها و نمادهای استفاده‌شده در نحو — تمرکز نمی‌کنیم، و در ادامه‌ی کتاب به آن بازخواهیم گشت.</p>
+
+
+
+<p>به مثال کد زیر توجه کنید:</p>
+
+
+<pre dir="ltr">
+<font color=white>
+# set the midpoint
+midpoint = 5
+
+# make two empty lists
+lower = []; upper = []
+
+# split the numbers into lower and upper
+for i in range(10):
+    if (i < midpoint):
+        lower.append(i)
+    else:
+        upper.append(i)
+        
+print("lower:", lower)
+print("upper:", upper)
+</pre>
+
+<p dir=ltr>
+lower: [0, 1, 2, 3, 4]<br>
+upper: [5, 6, 7, 8, 9]
+</p>
+
+
+<p>این اسکریپت کمی ساده و بی‌هدف است، اما به‌صورت فشرده چندین جنبهٔ مهم از نحو پایتون را نشان می‌دهد. بیایید خط‌به‌خط آن را مرور کنیم و برخی از ویژگی‌های نحوی پایتون را بررسی کنیم.</p>
+
+
+
+<h2>کامنت‌ها با علامت # مشخص می‌شوند.</h2>
+
+
+<p>اسکریپت با یک کامنت شروع می‌شود:</p>
+
+
+<pre dir="ltr">
+<font color=white>
+# set the midpoint
+</pre>
+
+
+
+<p>در پایتون، کامنت‌ها با علامت (#) مشخص می‌شوند و هر چیزی که پس از این علامت در همان خط بیاید، توسط مفسر نادیده گرفته می‌شود. این یعنی می‌توانید کامنت‌های مستقل داشته باشید، و همچنین کامنت‌های درون‌خطی که بعد از یک دستور قرار می‌گیرند.</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+x += 2  # shorthand for x = x + 2
+</pre>
+
+
+
+<p>پایتون هیچ نحو خاصی برای کامنت‌های چندخطی ندارد، مانند نحو /* ... */ که در C و C++ استفاده می‌شود، اگرچه رشته‌های چندخطی اغلب به‌عنوان جایگزین برای کامنت‌های چندخطی استفاده می‌شوند (در بخش «دستکاری رشته‌ها و عبارات منظم» بیشتر توضیح داده خواهد شد).</p>
+
+
+
+<h2>پایان خط، دستور را خاتمه می‌دهد</h2>
+
+
+
+<p>خط بعدی در اسکریپت این است:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+midpoint = 5
+</pre>
+
+
+<p>این یک عملیات اختصاص مقدار است، که در آن یک متغیر به نام midpoint ایجاد کرده‌ایم و مقدار 5 را به آن اختصاص داده‌ایم. توجه کنید که پایان این دستور صرفاً با پایان خط مشخص می‌شود. این در تضاد با زبان‌هایی مانند C و C++ است، که در آن‌ها هر دستور باید با سیمیکالن (;) خاتمه یابد.</p>
+
+
+<p>در پایتون، اگر بخواهید یک دستور به خط بعد ادامه یابد، می‌توان از علامت "\" برای این منظور استفاده کرد:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+x = 1 + 2 + 3 + 4 +\
+    5 + 6 + 7 + 8
+</pre>
+
+
+
+
+<p>همچنین می‌توان عبارات را داخل پرانتز ادامه داد بدون اینکه از علامت "\" استفاده کنید:</p>
+
+
+<pre dir="ltr">
+<font color=white>
+x = (1 + 2 + 3 + 4 +
+     5 + 6 + 7 + 8)
+</pre>
+
+
+
+<p>بیشتر راهنمای سبک پایتون، نسخه‌ی دوم ادامه خط (استفاده از پرانتز) را بر نسخه‌ی اول (استفاده از علامت "\") ترجیح می‌دهند.</p>
+
+
+
+<h2>استفاده از سیمیکالن می‌تواند اختیاری پایان یک دستور را مشخص کند</h2>
+
+
+<p>گاهی مفید است که چند دستور را در یک خط قرار دهیم. بخش بعدی اسکریپت این است:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+lower = []; upper = []
+</pre>
+
+
+
+<p>این مثال نشان می‌دهد که چگونه سیمیکالن (;) که در C آشناست، می‌تواند به‌طور اختیاری در پایتون برای قرار دادن دو دستور در یک خط استفاده شود. از نظر عملکرد، این کاملاً معادل نوشتن:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+lower = []
+upper = []
+</pre>
+
+
+<p>استفاده از سیمیکالن برای قرار دادن چند دستور در یک خط، به‌طور کلی توسط بیشتر راهنمای سبک پایتون توصیه نمی‌شود، اگرچه گاهی اوقات ممکن است مفید باشد.</p>
+
+
+<h2>تورفتگی: فاصله‌ها اهمیت دارند!</h2>
+
+
+<p>در ادامه، به بخش اصلی کد می‌رسیم:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+for i in range(10):
+    if i < midpoint:
+        lower.append(i)
+    else:
+        upper.append(i)
+</pre>
+
+
+<p>این یک دستور مرکب جریان کنترل است که شامل یک حلقه و یک شرط می‌شود – به زودی این نوع دستورات را بررسی خواهیم کرد. فعلاً در نظر داشته باشید که این مثال یکی از بحث‌برانگیزترین ویژگی‌های نحو پایتون را نشان می‌دهد: فاصله‌ها معنی‌دار هستند!</p>
+
+
+<p>در زبان‌های برنامه‌نویسی، یک بلوک کد مجموعه‌ای از دستورات است که باید به‌عنوان یک واحد در نظر گرفته شود. برای مثال، در C، بلوک‌های کد با آکولاد { } مشخص می‌شوند:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+// C code
+for(int i=0; i<100; i++)
+   {
+      // curly braces indicate code block
+      total += i;
+   }
+</pre>
+
+
+<p>در پایتون، بلوک‌های کد با تورفتگی (Indentation) مشخص می‌شوند:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+for i in range(100):
+    # indentation indicates code block
+    total += i
+</pre>
+
+
+
+<p>در پایتون، بلوک‌های کد با تورفتگی همیشه با یک دونقطه (:) در خط قبلی مشخص می‌شوند.</p>
+
+
+<p>استفاده از تورفتگی به حفظ سبک یکنواخت و خوانا کمک می‌کند، که بسیاری آن را جذاب می‌دانند. اما ممکن است برای افراد ناآشنا گیج‌کننده باشد؛ برای مثال، دو قطعه کد زیر نتایج متفاوتی تولید خواهند کرد:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+>>> if x < 4:         >>> if x < 4:
+...     y = x * 2     ...     y = x * 2
+...     print(x)      ... print(x)
+</pre>
+
+
+
+<p>در قطعه کد سمت چپ، print(x) در بلوک تورفته قرار دارد و تنها زمانی اجرا می‌شود که x کمتر از ۴ باشد. در قطعه کد سمت راست، print(x) خارج از بلوک است و بدون توجه به مقدار x اجرا می‌شود!</p>
+
+
+<p>استفاده‌ی پایتون از فاصله‌های معنی‌دار اغلب برای برنامه‌نویسانی که به زبان‌های دیگر عادت دارند، تعجب‌آور است، اما در عمل می‌تواند به کدی بسیار یکنواخت‌تر و خواناتر منجر شود نسبت به زبان‌هایی که تورفتگی بلوک‌های کد را الزامی نمی‌کنند. اگر استفاده‌ی پایتون از فاصله‌ها برای شما خوشایند نیست، توصیه می‌کنم آن را امتحان کنید: همان‌طور که من انجام دادم، ممکن است متوجه شوید که کم‌کم به آن علاقه‌مند می‌شوید.</p>
+
+
+<p>در نهایت، باید بدانید که مقدار فاصله‌ای که برای تورفتگی بلوک‌های کد استفاده می‌شود به عهده‌ی کاربر است، به شرطی که در سراسر اسکریپت یکسان باشد. طبق قرارداد، بیشتر راهنمای سبک‌ها توصیه می‌کنند که بلوک‌های کد با چهار فاصله تورفتگی داده شوند، و این همان قراردادی است که ما در این گزارش دنبال خواهیم کرد. توجه داشته باشید که بسیاری از ویرایشگرهای متنی مانند Emacs و Vim دارای حالت پایتون هستند که تورفتگی چهار فاصله‌ای را به‌طور خودکار اعمال می‌کنند.</p>
+
+
+
+<h2>فاصله‌ها درون خطوط اهمیتی ندارند</h2>
+
+
+<p>در حالی که اصل فاصله‌های معنی‌دار برای فاصله‌ها قبل از خطوط (که بلوک کد را مشخص می‌کنند) صادق است، فاصله‌ها درون خطوط کد پایتون اهمیتی ندارند. برای مثال، هر سه عبارت زیر معادل یکدیگرند:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+x=1+2
+x = 1 + 2
+x             =        1    +                2
+</pre>
+
+
+<p>سوءاستفاده از این انعطاف‌پذیری می‌تواند به مشکلاتی در خوانایی کد منجر شود – در واقع، سوءاستفاده از فاصله‌ها اغلب یکی از روش‌های اصلی برای عمداً مبهم کردن کد است (که برخی افراد برای تفریح انجام می‌دهند). استفاده‌ی مؤثر از فاصله‌ها می‌تواند باعث خوانایی بسیار بهتر کد شود، به‌ویژه در مواقعی که عملگرها پشت سر هم قرار می‌گیرند – دو عبارت زیر برای توان‌رسانی به یک عدد منفی را با هم مقایسه کنید:</p>
+
+
+<pre dir="ltr">
+<font color=white>
+x=10**-2
+to
+
+x = 10 ** -2
+</pre>
+
+
+<p>من نسخه‌ی دوم با فاصله‌ها را به‌مراتب راحت‌تر و در یک نگاه قابل خواندن می‌دانم. بیشتر راهنمای سبک پایتون توصیه می‌کنند که یک فاصله در اطراف عملگرهای دودویی استفاده شود و هیچ فاصله‌ای در اطراف عملگرهای یکتایی قرار نگیرد. در بخش «معناشناسی پایه پایتون: عملگرها» به‌طور مفصل‌تر درباره‌ی عملگرهای پایتون صحبت خواهیم کرد.</p>
+
+
+<h2>پرانتز برای گروه‌بندی یا فراخوانی است</h2>
+
+
+<p>در قطعه کد قبلی، دو کاربرد برای پرانتز مشاهده می‌کنیم. اول، می‌توان از آن‌ها به روش معمول برای گروه‌بندی دستورات یا عملیات ریاضی استفاده کرد:</p>
+
+
+<pre dir="ltr">
+<font color=white>
+2 * (3 + 4)
+</pre>
+
+<p dir=ltr>14</p>
+
+
+<p>همچنین می‌توان از پرانتز برای نشاندادن اینکه یک تابع فراخوانی می‌شود استفاده کرد. در قطعه کد بعدی، تابع print() برای نمایش محتوای یک متغیر استفاده شده است (به کادر کناری مراجعه کنید). فراخوانی تابع با یک جفت پرانتز باز و بسته مشخص می‌شود و آرگومان‌های تابع درون آن قرار می‌گیرند:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+print('first value:', 1)
+</pre>
+
+<p dir=ltr>first value: 1
+</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+print('second value:', 2)
+</pre>
+
+<p dir=ltr>second value: 2</p>
+
+
+
+<p>برخی توابع می‌توانند بدون هیچ آرگومانی فراخوانی شوند، در این صورت نیز پرانتزهای باز و بسته برای مشخص کردن ارزیابی تابع لازم هستند. نمونه‌ای از این مورد، متد sort در لیست‌ها است:</p>
+
+
+<pre dir="ltr">
+<font color=white>
+L = [4,2,3,1]
+L.sort()
+print(L)
+</pre>
+
+<p dir=ltr>[1, 2, 3, 4]</p>
+
+
+<p>علامت "()" بعد از sort نشان می‌دهد که تابع باید اجرا شود و حتی اگر هیچ آرگومانی نیاز نباشد، لازم است.</p>
+
+
+<h2>حاشیه: نکاتی درباره‌ی تابع print()</h2>
+
+
+<p>در بالا از مثال تابع <b dir=ltr>print()</b> استفاده کردیم. تابع <b dir=ltr>print()</b> یکی از بخش‌هایی است که بین پایتون ۲.x و پایتون ۳.x تغییر کرده است. در پایتون ۲، print به‌عنوان یک دستور رفتار می‌کرد؛ یعنی می‌توانستید بنویسید:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+# Python 2 only!
+>> print "first value:", 1
+first value: 1
+</pre>
+
+
+<p>به دلایل مختلف، نگهدارندگان زبان تصمیم گرفتند که در پایتون ۳، <b dir=ltr>print()</b> به یک تابع تبدیل شود، بنابراین اکنون می‌نویسیم:</p>
+
+
+
+<pre dir="ltr">
+<font color=white>
+# Python 3 only!
+>>> print("first value:", 1)
+first value: 1
+</pre>
+
+
+<p>این یکی از بسیاری از سازه‌های ناسازگار با نسخه‌های قبلی بین پایتون ۲ و ۳ است. تا زمان نگارش این کتاب، رایج است که مثال‌هایی به هر دو نسخه‌ی پایتون نوشته شوند، و وجود دستور print به جای تابع <b dir=ltr>print()</b> اغلب یکی از اولین نشانه‌هاست که نشان می‌دهد کد مربوط به پایتون ۲ است.</p>
+
+
+<h2>خاتمه و یادگیری بیشتر</h2>
+
+
+<p>این یک بررسی بسیار کوتاه از ویژگی‌های اساسی نحو پایتون بود؛ هدف آن این است که یک چارچوب مرجع خوب برای شما فراهم کند تا هنگام خواندن کد در بخش‌های بعدی بتوانید راحت‌تر آن را درک کنید. چندین بار به راهنماهای سبک پایتون (Python style guides) اشاره کرده‌ایم، که می‌توانند به تیم‌ها کمک کنند تا کد را با سبک یکسانی بنویسند. رایج‌ترین راهنمای سبک در پایتون PEP8 نام دارد و در این آدرس قابل دسترسی است: <a href=https://www.python.org/dev/peps/pep-0008/>https://www.python.org/dev/peps/pep-0008/</a>.<br> وقتی شروع به نوشتن کدهای بیشتر پایتون می‌کنید، مرور این راهنما بسیار مفید خواهد بود! پیشنهادهای سبک شامل تجربه و دانش بسیاری از کارشناسان پایتون است و اکثر این توصیه‌ها فراتر از صرفاً دقت‌های ظاهری هستند: آن‌ها توصیه‌های مبتنی بر تجربه‌اند که می‌توانند به جلوگیری از خطاها و باگ‌های ظریف در کد شما کمک کنند.</p>
+
+
+
+
+|
+<a href="02-نحوه اجرای کد پایتون.md">قبلی:نحوه اجرای کد پایتون</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="04-معناشناسی پایتون: متغیرها.md">بعدی:معناشناسی پایتون: متغیرها   </a>
+|
+
+
+
+</div>
