--- a/04-معناشناسی پایتون: متغیرها.md
+++ b/04-معناشناسی پایتون: متغیرها.md
@@ -1,1 +1,301 @@
-03
+<div dir="rtl">
+
+
+
+|
+<a href="03-سینتکس پایه پایتون.md">قبلی:سینتکس پایه پایتون</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="05-معناشناسی پایتون: عملگرها.md">بعدی:معناشناسی پایتون: عملگرها</a>
+|
+
+
+
+
+<h1>معناشناسی پایه پایتون: متغیرها و اشیاء</h1>
+
+
+<p>این بخش شروع به بررسی معناشناسی پایه زبان پایتون می‌کند. بر خلاف نحو (syntax) که در بخش قبلی بررسی شد، معناشناسی یک زبان مربوط به معنای دستورات است. مانند بحث قبلی درباره نحو، در اینجا نیز چند ساختار معناشناسی اساسی پایتون را مرور می‌کنیم تا چارچوب مرجع بهتری برای درک کدهای بخش‌های بعدی داشته باشید.</p>
+
+
+<p>این بخش به معناشناسی متغیرها و اشیاء می‌پردازد، که اصلی‌ترین روش‌ها برای ذخیره، ارجاع و پردازش داده‌ها در یک اسکریپت پایتون هستند.</p>
+
+
+<h2>متغیرهای پایتون اشاره‌گر هستند</h2>
+
+
+<p>اختصاص دادن مقادیر به متغیرها در پایتون به سادگی قرار دادن نام متغیر در سمت چپ علامت مساوی (=) است:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+# assign 4 to the variable x
+x = 4
+</pre>
+
+
+<p>این ممکن است ساده به نظر برسد، اما اگر مدل ذهنی اشتباهی از عملکرد این عملیات داشته باشید، رفتار پایتون می‌تواند گیج‌کننده به نظر برسد. در اینجا به‌طور کوتاه به این موضوع می‌پردازیم.</p>
+
+
+
+<p>در بسیاری از زبان‌های برنامه‌نویسی، متغیرها بهتر است به‌عنوان ظرف‌ها یا سطل‌هایی که داده‌ها در آن‌ها قرار می‌گیرند در نظر گرفته شوند. بنابراین، در زبان C، برای مثال وقتی می‌نویسید:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+// C code
+int x = 4;
+</pre>
+
+
+<p>در واقع شما در حال تعریف یک «ظرف حافظه» به نام x هستید و مقدار ۴ را در آن قرار می‌دهید. در مقابل، در پایتون متغیرها بهتر است نه به‌عنوان ظرف، بلکه به‌عنوان اشاره‌گر (pointer) در نظر گرفته شوند. بنابراین در پایتون، وقتی می‌نویسید:</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+x = 4
+</pre>
+
+
+
+<p>در واقع شما در حال تعریف یک اشاره‌گر به نام x هستید که به یک ظرف دیگر حاوی مقدار ۴ اشاره می‌کند. یکی از پیامدهای این موضوع این است که چون متغیرهای پایتون صرفاً به اشیاء اشاره می‌کنند، نیازی به اعلام قبلی متغیر (declare) نیست و حتی لازم نیست متغیر همیشه به اطلاعاتی از همان نوع اشاره کند! این همان مفهومی است که می‌گویند پایتون نوع‌پویا (dynamically-typed) است: نام متغیر می‌تواند به اشیاء از هر نوعی اشاره کند. بنابراین در پایتون می‌توانید کارهایی مانند این انجام دهید:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+x = 1         # x is an integer
+x = 'hello'   # now x is a string
+x = [1, 2, 3] # now x is a list
+</pre>
+
+
+<p>در حالی که کاربران زبان‌های نوع‌ثابت (statically-typed) ممکن است امنیت نوع (type-safety) که با اعلان‌هایی مانند آنچه در C وجود دارد از دست بدهند,</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+int x = 4;
+</pre>
+
+
+<p>این نوع‌پویا بودن یکی از عواملی است که پایتون را بسیار سریع برای نوشتن و آسان برای خواندن می‌کند.</p>
+
+
+<p>پیامدی که این رویکرد «متغیر به‌عنوان اشاره‌گر» دارد، باید از آن آگاه باشید: اگر دو نام متغیر به یک شیء قابل تغییر (mutable) اشاره کنند، تغییر یکی باعث تغییر دیگری نیز می‌شود! برای مثال، بیایید یک لیست ایجاد کرده و آن را تغییر دهیم:</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+x = [1, 2, 3]
+y = x
+</pre>
+
+
+<p>ما دو متغیر x و y ایجاد کرده‌ایم که هر دو به یک شیء اشاره می‌کنند. به همین دلیل، اگر لیست را از طریق یکی از نام‌هایش تغییر دهیم، مشاهده می‌کنیم که لیست «دیگر» نیز تغییر می‌کند:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+print(y)
+</pre>
+
+<p dir=ltr>
+[1, 2, 3]
+</p>
+
+
+<pre dir=ltr>
+<font color=white>
+x.append(4) # append 4 to the list pointed to by x
+print(y) # y's list is modified as well!
+</pre>
+
+<p dir=ltr>
+[1, 2, 3, 4]
+</p>
+
+
+<p>این رفتار ممکن است گیج‌کننده به نظر برسد اگر اشتباه فکر کنید که متغیرها ظرف‌هایی هستند که داده‌ها را در خود نگه می‌دارند. اما اگر متغیرها را درست به‌عنوان اشاره‌گر به اشیاء در نظر بگیرید، این رفتار منطقی است.</p>
+
+
+<p>توجه داشته باشید که اگر از "=" برای اختصاص مقدار دیگری به x استفاده کنیم، این تاثیری بر مقدار y ندارد – اختصاص دادن صرفاً تغییر اشیایی است که متغیر به آن اشاره می‌کند:</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+x = 'something else'
+print(y)  # y is unchanged
+</pre>
+
+<p dir=ltr>
+[1, 2, 3, 4]
+</p>
+
+
+<p>باز هم، این کاملاً منطقی است اگر x و y را به‌عنوان اشاره‌گر و عملگر "=" را به‌عنوان عملیاتی که اشیایی که نام به آن اشاره می‌کند را تغییر می‌دهد در نظر بگیرید.</p>
+
+
+
+<p>ممکن است فکر کنید که این ایده‌ی اشاره‌گر بودن متغیرها باعث می‌شود عملیات حسابی در پایتون سخت قابل پیگیری باشد، اما پایتون به‌گونه‌ای طراحی شده که این مشکل وجود نداشته باشد. اعداد، رشته‌ها و دیگر انواع ساده غیرقابل تغییر (immutable) هستند: شما نمی‌توانید مقدار آن‌ها را تغییر دهید – تنها می‌توانید تغییر دهید که متغیرها به چه مقداری اشاره کنند. بنابراین، برای مثال، انجام عملیاتی مانند موارد زیر کاملاً ایمن است:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+x = 10
+y = x
+x += 5  # add 5 to x's value, and assign it to x
+print("x =", x)
+print("y =", y)
+</pre>
+
+<p dir=ltr>
+x = 15<br>
+y = 10
+</p>
+
+
+<p>وقتی x += 5 را اجرا می‌کنیم، ما مقدار شیء ۱۰ که x به آن اشاره می‌کند را تغییر نمی‌دهیم؛ بلکه متغیر x را تغییر می‌دهیم تا به یک شیء عدد صحیح جدید با مقدار ۱۵ اشاره کند. به همین دلیل، مقدار y تحت تأثیر این عملیات قرار نمی‌گیرد.</p>
+
+
+<h2>همه چیز یک شیء است</h2>
+
+
+<p>پایتون یک زبان برنامه‌نویسی شیء‌گرا است و در پایتون همه چیز یک شیء است.</p>
+
+
+<p>بیایید معنای این موضوع را روشن کنیم. قبلاً دیدیم که متغیرها صرفاً اشاره‌گر هستند و نام‌های متغیر خودشان هیچ اطلاعات نوعی متصل ندارند. این باعث شده برخی به اشتباه ادعا کنند که پایتون بدون نوع است. اما این درست نیست! به مثال زیر توجه کنید:</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+x = 4
+type(x)
+</pre>
+
+<p dir=ltr>
+int
+</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+x = 'hello'
+type(x)
+</pre>
+
+<p dir=ltr>
+str
+</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+x = 3.14159
+type(x)
+</pre>
+
+<p dir=ltr>
+float
+</p>
+
+
+
+<p>پایتون دارای نوع است؛ با این حال، نوع‌ها به نام‌های متغیر متصل نیستند، بلکه به خود اشیاء مرتبط هستند.</p>
+
+
+<p>در زبان‌های برنامه‌نویسی شیءگرا مانند پایتون، یک شیء موجودیتی است که داده‌ها را همراه با فراداده و/یا عملکرد مرتبط در خود دارد. در پایتون همه چیز یک شیء است، به این معنا که هر موجودیت دارای برخی فراداده‌ها (attributes) و عملکردهای مرتبط (methods) است. این فراداده‌ها و متدها از طریق نحو نقطه (dot syntax) قابل دسترسی هستند.</p>
+
+
+
+<p>برای مثال، قبلاً دیدیم که لیست‌ها دارای متد append هستند که یک مورد را به لیست اضافه می‌کند و از طریق نحو نقطه (".") قابل دسترسی است:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+L = [1, 2, 3]
+L.append(100)
+print(L)
+</pre>
+
+<p dir=ltr>
+[1, 2, 3, 100]
+</p>
+
+
+<p>در حالی که انتظار می‌رود اشیاء مرکب مانند لیست‌ها دارای فراداده‌ها و متدها باشند، گاهی اوقات غیرمنتظره است که در پایتون حتی انواع ساده نیز دارای فراداده‌ها و متدهای متصل هستند. برای مثال، انواع عددی دارای attributeهای real و imag هستند که بخش حقیقی و موهومی مقدار را برمی‌گردانند، اگر آن مقدار به‌صورت یک عدد مختلط در نظر گرفته شود:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+x = 4.5
+print(x.real, "+", x.imag, 'i')
+</pre>
+
+<p dir=ltr>
+4.5 + 0.0 i
+</p>
+
+
+<p>متدها شبیه فراداده‌ها هستند، با این تفاوت که توابعی هستند که می‌توانید با استفاده از پرانتزهای باز و بسته فراخوانی کنید. برای مثال، اعداد اعشاری دارای متدی به نام is_integer هستند که بررسی می‌کند آیا مقدار یک عدد صحیح است یا خیر:</p>
+
+
+
+<pre dir=ltr>
+<font color=white>
+x = 4.5
+x.is_integer()
+</pre>
+
+<p dir=ltr>
+False
+</p>
+
+
+<pre dir=ltr>
+<font color=white>
+x = 4.0
+x.is_integer()
+</pre>
+
+<p dir=ltr>
+True
+</p>
+
+
+<p>وقتی می‌گوییم همه چیز در پایتون یک شیء است، واقعاً منظور این است که همه چیز یک شیء است – حتی فراداده‌ها و متدهای اشیاء خودشان اشیائی هستند با اطلاعات نوع مختص به خود:</p>
+
+
+<pre dir=ltr>
+<font color=white>
+type(x.is_integer)
+</pre>
+
+<p dir=ltr>
+builtin_function_or_method
+</p>
+
+
+<p>خواهیم دید که طراحی «همه چیز شیء است» در پایتون امکان ایجاد برخی ساختارهای زبانی بسیار کاربردی را فراهم می‌کند.</p>
+
+
+
+
+|
+<a href="03-سینتکس پایه پایتون.md">قبلی:سینتکس پایه پایتون</a>
+|
+<a href="00-فهرست.md">فهرست</a>
+|
+<a href="05-معناشناسی پایتون: عملگرها.md">بعدی:معناشناسی پایتون: عملگرها</a>
+|
+
+
+
+</div>
